[tool.poetry]
name = "loan-management-system"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "loan_management_system"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.7"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src", "loan_management_system"]
line_length = 79

[tool.black]
line_length = 79
